@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2025-02-03
+ * Added route for Facebook data deletion at /account/facebook/delete per https://developers.facebook.com/docs/development/create-an-app/app-dashboard/data-deletion-callback/
+
 2024-10-11
  * Remove smartmatch
 
